<resources>
    <string name="app_name">ggMap</string>
    <string name="title_activity_maps">Map</string>
    <string name="location_permission_denied">This app requires location permission to enable the \'my location\' layer. Please try again and grant access to use the location.\nIf the permission has been permanently denied, it can be enabled from the System Settings &gt; Apps &gt; \'Google Maps API Demos\'.</string>
    <string name="permission_required_toast">Location permission is required for this app.</string>
    <string name="default_info_title">Default Location</string>
    <string name="default_info_snippet">No places found, because location permission is disabled.</string>
    <string name="option_get_place">Get place</string>
    <string name="pick_place">Choose a place</string>
    <string name="elert">ELERT</string>
    <string name="wifi">Please try again and grant access to use <b>Wifi</b></string>
    <string name="location">Please try again and grant access to use the <b>Location</b></string>
    <string name="permission_rationale_location">Access to the location service is required to demonstrate the \'my location\' feature, which shows your current location on the map.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="swipe_left_for_register">Create new account</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="e_mail">Email</string>
    <string name="tag">Connection your world</string>
    <string name="swipe_right_for_login">Swipe Right for Login</string>
    <string name="register">Register now</string>
    <string name="re_type_password">Re-type Password</string>
    <string name="your_name">Full Name</string>

    <string name="code_0">Connection timeout</string>
    <string name="code_404">Resource not avaliable</string>
    <string name="e_session_expired">Your session has expired</string>
    <string name="server_response">SERVER_RESPONSE</string>
    <string name="server_message">message</string>
    <string name="server_error">error</string>
</resources>
